# offaxis

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  meson.build  pyproject.toml
include/offaxis/: offaxis.h  parameter.hxx
offaxis/: __init__.py  initpackage.py
python/: __init__.py  initpackage.py  offaxis.pyx
src/offaxis/: envs.cxx  envs.hxx  histogram.hxx  kbhtables.cxx  kyn.cxx  kyn.hxx  memory.hxx  offaxline.cxx  raytracing.cxx  raytracing.hxx  sphere.cxx  sphere.hxx  xspecmodel.cxx
src/offaxis/convolve/: convolve.cxx  convolve.hxx  offaxconv.cxx  spec_cache.cxx
src/offaxis/offaxconv/: convolve.cxx  convolve.hxx  offaxconv.cxx
src/offaxis/offaxline/: envs.cxx  envs.hxx  histogram.hxx  kbhtables.cxx  kbhtables.hxx  offaxline.cxx  raytracing.cxx  raytracing.hxx  sphere.cxx  sphere.hxx
src/offaxis/offaxxill/: doppler.cxx  doppler.hxx  emission.cxx  emission.hxx  offaxxill.cxx  primary.hxx  spectrum.cxx  spectrum.hxx  xilltable.cxx
src/offaxis/reflection/: cache.hxx  emission.hxx  initialize.cxx  offaxxill.cxx  primary.cxx  reflection.cxx  reflection.hxx  spectrum.cxx  spectrum.hxx
src/offaxis/xspecmodel/: __init__.py  initpackage.py  offaxis.pyx  xspecmodel.cxx
