[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core",
    "cython-cmake",
    "cython",
]

[tool.scikit-build]
cmake.args = ["-GNinja"]
ninja.make-fallback = false
wheel.py-api = "cp38"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "CMakeLists.txt"
metadata.version.regex = "VERSION \"(?P<value>[0-9]+(\\.[0-9]+)*)\""

[project]
name = "offaxis"
dynamic = ["version"]
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE", 
    "src/relxill/LICENSE", 
    "src/YNOGK-CXX/LICENSE", 
    "src/YNOGK-CXX/YNOGK/LICENSE"
]

[build-system.meson-python]
build-backend = "mesonpy"
requires = [
    "meson-python",
    "meson >= 1.6.0",
    "cython",
]

[tool.meson-python]
args.install = ['--tags=runtime']
limited-api = true
